# This is a list of changes in pygame's history.
#
# CVS tag names are placed before the date
# BREAK = change breaks existing code
# BUG   = fixed a bug that was crashing

Feb 12, 2001
	workaround python parsing error for pygame.time.delay(-1)

Feb 9, 2001
	setting rectangle width/height/size changes the
		right/bottom edges (instead of top/right) [BREAK]

Feb 6, 2001
	fixed the music unpause() function

Jan 31, 2001
	functions taking RGBA colors can also accept mapped ints

Jan 30, 2001
	added draw.lines()

Jan 29, 2001
	extremely revamped surface locking mechnisms
	new Surface.subsurface for shared surfaces

Jan 25, 2001
	added the draw module, with clipped line function
	added alpha routines in surfarray module
	more locking checks for surfarray
	make extra sure all of SDL is shutdown properly

Jan 24, 2001
	funcs that need locked surfaces will temporarily lock them
	   (Surface.set_at, Surface.get_at, surfarray.arrayXd)

Jan 23, 2001
	display.update() no longer effects input Rects [BREAK]
	Surface.fill() no longer effects input Rect [BREAK]
	small memory leak in display.update() fixed

Jan 18, 2001
	cursor.read_xbm() renamed to cursor.load_xbm() [BREAK]

Jan 17, 2001
	documentation updated to include python modules too

Jan 16, 2001
	cursors module beefed up

Jan 15, 2001
	fix Surface.get_at() for 24bit surfaces
	endian cleanups for surfarray

Jan 8, 2001
	more warning cleanups
	music-finished callback fixed
	replaces SDL's parachute with smarter python version

Jan 6, 2001
	added pygame.version module

pygame-05
Jan 6, 2001
	Final cleanups for the new release

Jan 4, 2001
	Surface.blit() allows for rects as dest position
	surfarray cleanups and improvements

Dec 22, 2000
	timer threads properly shutdown

Dec 14, 2000
	display.set_mode pretending shorts are ints [BUG]

pygame-04
Dec 14, 2000
	music module had incorrect names for volume functions
	chimp example and full tutorial added

Dec 13, 2000
	display.update() is entirely better in many ways [BUG]
